# tenx-hooks

./: CLAUDE.md  Cargo.toml  README.md
crates/claude-transcript/: Cargo.toml  README.md
crates/claude-transcript/examples/: ttest.rs
crates/claude-transcript/src/: lib.rs  parse.rs
crates/claude-transcript/tests/: test_transcript_parsing.rs
crates/code-hooks/: Cargo.toml  README.md
crates/code-hooks/examples/: dangerous_check.rs  notification_handler.rs  posttool_logger.rs  precheck.rs  stop_handler.rs  subagent_stop_handler.rs
crates/code-hooks/src/: error.rs  io.rs  lib.rs  notification.rs  parse.rs  posttool.rs  pretool.rs  stop.rs  subagent_stop.rs
crates/code-hooks/tests/: test_transcript_parsing.rs
crates/hooktest/: Cargo.toml  README.md
crates/hooktest/src/: color.rs  execute.rs  input.rs  log.rs  main.rs  notification.rs  output.rs  posttool.rs  pretool.rs  stop.rs  subagent_stop.rs  transcript.rs
crates/hooktest/tests/: cli_tests.rs
crates/rust-hook/: Cargo.toml
crates/rust-hook/src/: lib.rs  main.rs  utils.rs
crates/rust-hook/tests/: integration_test.rs
crates/tenx-hooks/: Cargo.toml
crates/tenx-hooks/examples/: dangerous_check.rs  notification_handler.rs  posttool_logger.rs  precheck.rs  stop_handler.rs  subagent_stop_handler.rs
crates/tenx-hooks/src/: error.rs  exit.rs  hook.rs  input.rs  io.rs  lib.rs  notification.rs  output.rs  posttool.rs  pretool.rs  response.rs  stop.rs  subagent_stop.rs  transcript.rs
crates/tenx-hooks/tests/: test_transcript_parsing.rs
docs/: summary.md
sandbox/: .gitignore  README.md  edit.sh  shell.sh  subagent.sh  web.sh
scripts/: README.md  test-dangerous.sh  test-notification.sh  test-posttool.sh  test-precheck.sh  test-stop.sh
