[package]
name = "claude-transcript"
version = "0.0.1"
edition = "2024"
description = "Transcript parsing library for Claude conversations"
license = "MIT"
authors = ["Claude Code Contributors"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
syntect = "5"
atty = "0.2"
