[package]
name = "hooktest"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
code-hooks = { path = "../code-hooks" }
claude-transcript = { path = "../claude-transcript" }
termcolor = "1"
syntect = "5"
atty = "0.2"

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"
predicates = "3"
