[package]
name = "tenx-hooks"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[[example]]
name = "precheck"
path = "../../examples/precheck.rs"

[[example]]
name = "bash_validator"
path = "../../examples/bash_validator.rs"

[[example]]
name = "file_guard"
path = "../../examples/file_guard.rs"
